# libfunctionality

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Jenkinsfile  NOTICE  README.md  appveyor.yml  format.cmd
android/jni/: Android.mk
devtools/: cibuild.cmd  format-project.cmd  format-project.sh
inc/libfunctionality/: Common.h  Exceptions.h  LibraryHandle.h  LoadPlugin.h  PluginHandle.h  PluginInterface.h  SharedPtr.h
src/libfunctionality/: BinaryLocation.cpp  BinaryLocation.h  CMakeLists.txt  Common.h  DynamicLoadConfig.h.in  Exceptions.h  Export.h.in  LibraryHandleLibdl.cpp  LibraryHandleLibdl.h  LibraryHandleWin32.cpp  LibraryHandleWin32.h  LoadModule.cpp  LoadModule.h  LoadPlugin.cpp  LoadPlugin.h  LoadPluginInternal.h  LoadPluginLibdl.cpp  LoadPluginLibdl.h  LoadPluginWin32.cpp  LoadPluginWin32.h  ModuleInterface.h  Nullptr.h  PlatformDefinitions.h  PluginHandle.cpp  PluginInterface.h
tests/: CMakeLists.txt
tests/cplusplus/: CMakeLists.txt  DummyPlugin.cpp  DummyPlugin.h  DummyPluginWithParam.cpp  ExampleLoadTest.cpp  LoadTest.cpp  LoadTestWithParam.cpp  LoadTests.cpp
